# mmm798

./: .gitignore  Cargo.toml  README.md
.github/workflows/: desktop-build.yml
clients/cuda-miner/: Cargo.toml
clients/cuda-miner/src/: gpu.rs  kernel.cu  main.rs
clients/website/: package-lock.json  package.json
clients/website/public/wasm/: equium_wasm_bg.wasm
clients/website/src/app/: globals.css  layout.tsx
clients/website/src/app/api/state/: route.ts
clients/website/src/app/docs/rpc/: page.tsx
clients/website/src/app/download/: page.tsx
clients/website/src/app/explorer/: page.tsx
clients/website/src/app/mine/: opengraph-image.tsx  page.tsx
clients/website/src/components/: ExplorerDashboard.tsx  Faq.tsx  Footer.tsx  HashrateChart.tsx  Hero.tsx  HowItWorks.tsx  MineClient.tsx  MineDashboard.tsx  MinePlaceholder.tsx  MiningPreview.tsx  Navbar.tsx  ShareCardModal.tsx  Tokenomics.tsx  WalletProvider.tsx
clients/website/src/components/wallet/: SendModal.tsx
clients/website/src/lib/: miner-engine.ts  program.ts  rpc.ts
